--- a/code/server_software/tonight_server/Gemfile
+++ b/code/server_software/tonight_server/Gemfile
@@ -34,6 +34,7 @@ end
 
 group :development, :test do
   gem 'rspec-rails', '~> 3.0.0.beta'
+  gem "webmock", "~> 1.17.3"
 end
 
 # Use ActiveModel has_secure_password
