Resolves issue #4 adds in inline editing for all relevant records. If a user wishes to change the api/filter then they should cancel current job and then recreate a new job.

--- a/code/server_software/tonight_server/Gemfile
+++ b/code/server_software/tonight_server/Gemfile
@@ -43,6 +43,9 @@ end
 
 gem "httparty", "~> 0.13.0"
 
+#Add in editable stuff
+gem 'bootstrap-editable-rails'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
