--- a/code/server_software/tonight_server/Gemfile
+++ b/code/server_software/tonight_server/Gemfile
@@ -40,6 +40,9 @@ group :test do
 	gem "webmock", "~> 1.17.3"
 	gem 'factory_girl_rails'
 	gem 'pg'
+	gem 'spork-rails', '4.0.0'
+	gem 'guard-spork', '1.5.0'
+	gem 'childprocess', '0.3.6'
 end
 
 gem "httparty", "~> 0.13.0"
