--- a/code/server_software/tonight_server/Gemfile
+++ b/code/server_software/tonight_server/Gemfile
@@ -27,7 +27,11 @@ gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 1.2'
 
+#For OAuth access tokens/management
 gem 'doorkeeper'
+
+#For password encryption
+gem 'bcrypt-ruby', :require => 'bcrypt'
 
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
