Added in loading for login, and update some of the views.

--- a/code/iOS_app/tonightapp/tonightapp/tonightapp-Info.plist
+++ b/code/iOS_app/tonightapp/tonightapp/tonightapp-Info.plist
@@ -51,6 +51,8 @@
 			<false/>
 		</dict>
 	</dict>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
